Issue #3250317: Views exposed radio/checkbox filter alignment

--- a/styles/base/_views.scss
+++ b/styles/base/_views.scss
@@ -115,6 +115,15 @@
     max-width: 240px;
   }
 
+  .form-type--boolean .form-boolean {
+    margin-left: 0;
+    margin-right: .5rem;
+  }
+
+  .fieldset--group {
+    margin-top: .75rem;
+  }
+
   // Exposed filter with fieldgroup
   fieldset {
     margin-right: .75rem;
